--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <body class="body">
 				<h1>Leiam Nash - beta
 <h3>This Log in method is for testing only  please don't put your email and some important information
-<h4> Created by Leiam Nash
+<p class="credits">
+					Created by <a href="https://www.github.com/LeiamNashRebirth">Leiam Nash</a>
+				</p>
 	
 	<a href="https://github.com/LeiamNashRebirth/Login-WebView"><img style="position: absolute; top: 0; left: 0; border: 0;"  data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png"></a>
 
@@ -37,6 +39,15 @@
     <form class="login-form">
       <button type="button" onclick="window.location.href='signup.html'">SIGN UP</button>
     </form>
+    <p class="credits">
+					Follow me on <a href="https://www.github.com/LeiamNashRebirth">Github</a>
+				</p>
+				<p class="credits">
+					Follow me on <a href="https://www.facebook.com/leiamnash.ronquillo.1">Facebook</a>
+				</p>
+				<p>
+								Developer: Leiam Nash
+</p>
   </div>
 </div>
 
